Send the video surface destruction message on all Android versions

We previously only sent this on JB to avoid crashes we saw there. It
looks like we're seeing crashes on KK as well, so we have to enable it
there too. It will be enabled for M+ soon to implement #setSurface
support, so that leaves L as the odd one out. For simplicity we'll
just enable it everywhere.

BUG=662599

Review-Url: https://codereview.chromium.org/2481583003
Cr-Commit-Position: refs/heads/master@{#430108}

Former-commit-id: 908f0cebd618d41880fdd5f7e7e83e19c39a45c7